# Image-Dehazing-AOD-Net

./: README.md  model.py
cpp inference/: CMakeLists.txt  main.cpp
data/: res_model_weights.pt  trans_model_weights.pt
data/weights/: model_weights_10.pt  model_weights_new.pt
notebooks/: create_train_dataset.ipynb  model.ipynb  test_model.ipynb  train_res_model.ipynb  train_trans_model.ipynb
python inference/: inference.py
src/: config.json  dataloader.py  model.py  residual_model.py  train_model.py  transmission_model.py
